<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MSChatRoom</string>
    <string name="app_name_short">MSCR</string>
    <string name="activity_main_screen_offline_mode_name">MSChatRoom (Offline Mode)</string>
    <string name="activity_login_screen_name">Login</string>
    <string name="activity_register_screen_name">Register</string>
    <string name="activity_settings_screen_name">Settings</string>
    <string name="activity_reset_password_name">Reset Password</string>
    <string name="activity_chat_screen_name">Chat</string>
    <string name="activity_modify_user_information_screen_name">Account Profile</string>
    <string name="activity_login_by_ec_screen_name">Login By Email</string>
    <string name="activity_about_screen_name">About</string>
    <string name="activity_picture_viewer_name">Picture Viewer</string>
    <string name="activity_developer_options_name">Developer Options</string>
    <string name="activity_modify_user_information_screen_offline_mode_name">Account Profile (Offline Mode)</string>
    <string name="activity_settings_screen_offline_mode_name">Settings (Offline Mode)</string>
    <string name="edittexthint_input_account_or_email">Account or Email Address</string>
    <string name="edittexthint_input_password">Password</string>
    <string name="edittexthint_input_account">Account</string>
    <string name="edittexthint_rp_input_email">Email Address of Account Forgotten Password</string>
    <string name="edittexthint_reg_confirm_password">Confirm Password</string>
    <string name="edittexthint_reg_input_email">Email Address</string>
    <string name="edittexthint_input_captcha">CAPTCHA</string>
    <string name="edittexthint_input_new_password">Input New Password</string>
    <string name="edittexthint_lbec_input_email">Email Address</string>
    <string name="edittexthint_dialog_set_server_information_server_address">Server Address</string>
    <string name="edittexthint_dialog_set_server_information_database_name">Database Name</string>
    <string name="edittexthint_dialog_set_server_information_database_user_name">Database User Name</string>
    <string name="edittexthint_dialog_set_server_information_database_user_password">Database User Password</string>
    <string name="edittexthint_dialog_set_server_information_database_table_name">Database Table Name</string>
    <string name="edittexthint_dialog_set_server_information_server_port">Server Port (used for communication)</string>
    <string name="edittexthint_dialog_set_server_port_integer">Enter integer</string>
    <string name="button_register">Register</string>
    <string name="button_reinput_email">Re input email</string>
    <string name="button_login">Login</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_next">Next</string>
    <string name="button_send">Send</string>
    <string name="button_get_captcha">Get CAPTCHA</string>
    <string name="button_login_by_emailandcaptcha">Login by email and CAPTCHA</string>
    <string name="textview_tip_reset_password">Forgot Password?</string>
    <string name="textview_tip_login">Have an account?</string>
    <string name="textview_password_different">The two passwords entered are different.</string>
    <string name="textview_tip_register">No account?</string>
    <string name="textview_input_content_empty">The input content cannot be empty</string>
    <string name="textview_about_what_is_this">An open source chat application</string>
    <string name="textview_about_version_partical">Version</string>
    <string name="textview_about_copyrightForChinese" translatable="false">MrShiehX 版权所有</string>
    <string name="textview_about_copyright" translatable="false">Copyright © 2021 MrShiehX</string>
    <string name="textview_about_author">MrShiehX is the author of this application.</string>
    <string name="textview_dialog_set_server_information_server_address_tip">Server Address:</string>
    <string name="textview_dialog_set_server_information_database_name_tip">Database Name:</string>
    <string name="textview_dialog_set_server_information_database_user_name_tip">Database User Name:</string>
    <string name="textview_dialog_set_server_information_database_user_password_tip">Database User Password:</string>
    <string name="textview_dialog_set_server_information_database_table_name_tip">Database Table Name:</string>
    <string name="textview_dialog_set_server_information_server_port_tip">Server Port (used for communication)</string>
    <string name="checkbox_show_password">Show password</string>
    <string name="checkbox_remember_account_or_email_and_password">Remember the account or email and password</string>
    <string name="aceterror_password_insufficient_length_or_too_long">Please enter an 8-16 digit password</string>
    <string name="aceterror_invalid_email">Invalid Email Address</string>
    <string name="aceterror_password_different">The two passwords entered are different.</string>
    <string name="preference_settings_category_display_interface_title">Appearance</string>
    <string name="preference_settings_list_modify_theme_title">Theme</string>
    <string name="preference_settings_list_modify_theme_dialogtitle">Select a theme</string>
    <string name="preference_settings_list_modify_language_title">Language</string>
    <string name="preference_settings_list_modify_language_dialogtitle">Select a language</string>
    <string name="preference_account_notlogged_title">Did not login a account</string>
    <string name="preference_account_notlogged_summary">Click to login</string>
    <string name="preference_account_logout">Log out</string>
    <string name="preference_account_title_no_name_set">User %s</string>
    <string name="preference_account_summary_tip_set_whatsup">Please set biography</string>
    <string name="preference_account_avatar_title">Avatar</string>
    <string name="preference_account_avatar_summary">Click to change the avatar</string>
    <string name="preference_account_name_title">Nickname</string>
    <string name="preference_account_name_summary">The nickname did not set</string>
    <string name="preference_account_gender_title">Gender</string>
    <string name="preference_account_gender_summary">The gender did not set</string>
    <string name="preference_account_gender_dialogtitle">Select a gender</string>
    <string name="preference_account_whatsup_title">Biography</string>
    <string name="preference_account_whatsup_summary">The biography did not set</string>
    <string name="preference_account_gender_male">Male</string>
    <string name="preference_account_gender_female">Female</string>
    <string name="preference_delete_account_title">Delete Account</string>
    <string name="preference_delete_account_summary">Delete all data of the account</string>
    <string name="preference_delete_account_input_email">Please input password</string>
    <string name="preference_account_title">Account</string>
    <string name="preference_account_email_title">Email Address</string>
    <string name="preference_settings_category_application_title">Application</string>
    <string name="preference_clear_cache_title">Clear Cache</string>
    <string name="preference_clear_cache_summary">Clear application cache (temporary data)</string>
    <string name="preference_clear_application_data_title">Clear Application Data</string>
    <string name="preference_clear_application_data_summary">Clear all data of application</string>
    <string name="preference_settings_category_account_title">Account</string>
    <string name="preference_server_address_title">Server Address</string>
    <string name="preference_server_address_summary">Please set the server address</string>
    <string name="preference_database_name_title">Database Name</string>
    <string name="preference_database_name_summary">Please set the database name</string>
    <string name="preference_database_user_name_title">Database User Name</string>
    <string name="preference_database_user_name_summary">Please set the database user name</string>
    <string name="preference_database_user_password_title">Database User Password</string>
    <string name="preference_database_user_password_summary">Please set the database user password</string>
    <string name="preference_database_user_password_seted_summary">Password has been set</string>
    <string name="preference_database_table_name_title">Database Table Name</string>
    <string name="preference_database_table_name_summary">Please set the database table name</string>
    <string name="preference_show_logs_in_loading_interface_title">Show Logs In Loading Screen</string>
    <string name="preference_show_logs_in_loading_interface_summary">Show the loading log in loading screen</string>
    <string name="preference_settings_category_chat_title">Chat</string>
    <string name="preference_show_avatars_when_chatting_title">Show avatars when chatting</string>
    <string name="preference_show_avatars_when_chatting_summary">Show each other\'s avatars on the chat screen</string>
    <string name="preference_settings_new_messages_notify_title">Notify when receive new messages</string>
    <string name="preference_settings_new_messages_notify_summary">Notify when you receive new messages</string>
    <string name="preference_server_port_title">Server Port</string>
    <string name="preference_server_port_summary">Please set the server port (used for communication)</string>
    <string name="preference_modify_password_title">Reset the Password</string>
    <string name="preference_settings_receive_strangers_offline_messages_title">Receive the offline messages from strangers</string>
    <string name="preference_settings_receive_strangers_offline_messages_summary">When downloading the offline messages, whether to automatically add strangers and receive the messages from strangers (always do not receive the messages from strangers even online)</string>
    <string name="preference_modify_password_summary">Reset the password of the account</string>
    <string name="dialog_exception_parsing_json_failed">JSON file parsing failed</string>
    <string name="dialog_exception_parsing_xml_failed">XML file parsing failed</string>
    <string name="dialog_title_wait">Wait</string>
    <string name="dialog_downloading_message">Downloading File...</string>
    <string name="dialog_exception_title">An error occurred</string>
    <string name="dialog_exception_message">Sorry, an error occurred in the program. We recommend that you report this problem to the author. The class file is: %1$s; the error is: %2$s</string>
    <string name="dialog_no_network_title">No Network</string>
    <string name="dialog_no_network_message">There is no network connection, please connect to the network and restart the application</string>
    <string name="dialog_no_network_button_exit">Exit</string>
    <string name="dialog_title_notice">Notice</string>
    <string name="dialog_exit_message">Do you want to exit?</string>
    <string name="dialog_exit_button_exit">Exit</string>
    <string name="dialog_exception_detail_title">An error occurred</string>
    <string name="dialog_exception_detail_message">Sorry, an error occurred in the program. We recommend that you report this problem to the author. The class file is: %1$s; the error is: %2$s (%3$s)</string>
    <string name="dialog_exception_downloadfailed">Failed to download file</string>
    <string name="dialog_exception_button_feedback">Feedback To The Author</string>
    <string name="dialog_exception_failed_get_captcha">Failed to get CAPTCHA</string>
    <string name="dialog_registering_message">Registering...</string>
    <string name="dialog_exception_failed_upload_data">Data upload failed</string>
    <string name="menu_chat_send">Send...</string>
    <string name="menu_chat_send_picture">Picture</string>
    <string name="menu_chat_send_file">File</string>
</resources>