<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="account_avatar"
        android:title="@string/preference_account_avatar_title"
        android:summary="@string/preference_account_avatar_summary"/>
    <Preference
        android:key="account"
        android:title="@string/preference_account_title"/>
    <Preference
        android:key="account_email"
        android:title="@string/preference_account_email_title" />
    <Preference
        android:key="account_name"
        android:title="@string/preference_account_name_title"
        android:summary="@string/preference_account_name_summary"/>
    <Preference
        android:key="account_gender"
        android:title="@string/preference_account_gender_title"
        android:summary="@string/preference_account_gender_summary"/>
    <Preference
        android:key="account_whatsup"
        android:title="@string/preference_account_whatsup_title"
        android:summary="@string/preference_account_whatsup_summary"/>
    <Preference
        android:key="delete_account"
        android:title="@string/preference_delete_account_title"
        android:summary="@string/preference_delete_account_summary"/>
</PreferenceScreen>