<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="show_logs_on_loading_interface"
        android:title="@string/preference_show_logs_in_loading_interface_title"
        android:summary="@string/preference_show_logs_in_loading_interface_summary"
        android:defaultValue="true"/>
    <EditTextPreference
        android:key="server_address"
        android:title="@string/preference_server_address_title"
        android:summary="@string/preference_server_address_summary"/>
    <EditTextPreference
        android:key="database_name"
        android:title="@string/preference_database_name_title"
        android:summary="@string/preference_database_name_summary"/>
    <EditTextPreference
        android:key="database_user_name"
        android:title="@string/preference_database_user_name_title"
        android:summary="@string/preference_database_user_name_summary"/>
    <CheckBoxPreference
        android:key="isShowPassword"
        android:title="@string/checkbox_show_password"/>
    <EditTextPreference
        android:key="database_user_password"
        android:title="@string/preference_database_user_password_title"
        android:summary="@string/preference_database_user_password_summary"/>
    <EditTextPreference
        android:key="database_table_name"
        android:title="@string/preference_database_table_name_title"
        android:summary="@string/preference_database_table_name_summary"/>
</PreferenceScreen>