<?xml version="1.0" encoding="UTF-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="account"
        android:icon="@drawable/account"
        android:title="@string/preference_account_notlogged_title"/>
    <PreferenceCategory android:title="@string/preference_settings_category_display_interface_title">
        <ListPreference
            android:dialogTitle="@string/preference_settings_list_modify_theme_dialogtitle"
            android:entries="@array/preference_settings_interface_themes"
            android:entryValues="@array/preference_settings_interface_themes_values"
            android:key="modify_theme"
            android:defaultValue="light"
            android:title="@string/preference_settings_list_modify_theme_title" />
        <ListPreference
            android:dialogTitle="@string/preference_settings_list_modify_language_dialogtitle"
            android:entries="@array/preference_settings_interface_languages"
            android:entryValues="@array/preference_settings_interface_languages_values"
            android:key="modify_language"
            android:title="@string/preference_settings_list_modify_language_title" />
    </PreferenceCategory>

    <Preference
        android:key="logout"
        android:title="@string/preference_account_logout"/>
</PreferenceScreen>

