<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_chat_send"
        android:orderInCategory="100"
        android:title="@string/menu_chat_send"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_chat_send_picture"
                android:orderInCategory="100"
                android:title="@string/menu_chat_send_picture"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_chat_send_file"
                android:orderInCategory="100"
                android:title="@string/menu_chat_send_file"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>