<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.screen.LoginScreen"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70px"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_account_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittexthint_input_account_or_email"
            android:singleLine="true"
            android:digits="qwertyuiopasdfghjklzxcvbnm1234567890_QWERTYUIOPASDFGHJKLZXCVBNM@."
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittexthint_input_password"
            android:singleLine="true"
            android:digits="qwertyuiopasdfghjklzxcvbnm1234567890_QWERTYUIOPASDFGHJKLZXCVBNM"
            />
    </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/log_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50px"
                android:layout_marginLeft="50px"
                android:layout_marginEnd="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="30px"
                android:text="@string/checkbox_show_password" />

    <CheckBox
        android:id="@+id/remember_account_and_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:layout_marginTop="30px"
        android:text="@string/checkbox_remember_account_or_email_and_password" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginTop="30px"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tip_register"
        android:text="@string/textview_tip_register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/go_to_register"
            android:text="@string/button_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tip_reset_password"
            android:text="@string/textview_tip_reset_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/go_to_reset_password"
            android:text="@string/button_reset_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>

            <TextView
                android:id="@+id/input_content_empty"
                android:text="@string/textview_input_content_empty"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="50px"
                android:layout_marginLeft="50px"
                android:layout_marginEnd="50px"
                android:layout_marginRight="50px"
                android:visibility="gone"
                android:textColor="#FF0000"
                android:singleLine="true"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50px"
        android:layout_marginLeft="50px"
        android:layout_marginEnd="50px"
        android:layout_marginRight="50px"
        android:layout_marginTop="30px"
        android:text="@string/button_login" />
        </LinearLayout></ScrollView>
</LinearLayout>