<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher_max" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            style="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/what_is_this"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_about_what_is_this"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/versionNameAndCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/textview_about_author"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.mrshiehx.mschatroom.widget.AboutListView
            android:id="@+id/usersCanDoListview"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/copyrightAndAllRightsReservedForChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textview_about_copyrightForChinese"/>

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textview_about_copyright"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>